# ip-geo-search

./: README.md  api.py  lookup.py  pyproject.toml
src/ipgeosearch/: __init__.py  cli.py  config.py  geoip2_adapter.py  ip2region_adapter.py  ip_location_db.py  models.py  server.py  service.py
src/ipgeosearch/static/: app.js  index.html  styles.css
src/ipgeosearch/static/assets/: china-coordinates.json
